[gd_scene load_steps=5 format=3 uid="uid://cgbmsbtxhgv6n"]

[ext_resource type="Theme" uid="uid://1wb212ex770t" path="res://ThemeResources/Theme_Menu.tres" id="1_3xrgr"]
[ext_resource type="Texture2D" uid="uid://bfosup075cmr" path="res://Sprites/9patch_panel.png" id="2_po8r8"]
[ext_resource type="Script" uid="uid://b8v868f7fstny" path="res://Scripts/Interfaces/buff_card.gd" id="3_r63rn"]
[ext_resource type="Texture2D" uid="uid://dlgqdt052q6l6" path="res://Sprites/Buffs/buff_test.png" id="4_po8r8"]

[node name="BuffCard" type="NinePatchRect"]
modulate = Color(0.733333, 0.733333, 0.733333, 1)
offset_right = 720.0
offset_bottom = 150.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 0
theme = ExtResource("1_3xrgr")
texture = ExtResource("2_po8r8")
region_rect = Rect2(0, 0, 144, 144)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource("3_r63rn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_left = 42
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 45

[node name="BuffSprite" type="TextureRect" parent="MarginContainer/HBoxContainer" groups=["buff_sprite"]]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("4_po8r8")
stretch_mode = 6

[node name="BuffName" type="RichTextLabel" parent="MarginContainer/HBoxContainer" groups=["buff_name"]]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
text = "This is an example text"
scroll_active = false
vertical_alignment = 1
meta_underlined = false

[connection signal="gui_input" from="." to="." method="_on_NinePatchRect_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_NinePatchRect_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_NinePatchRect_mouse_exited"]
